--- a/index.html
+++ b/index.html
@@ -43,18 +43,24 @@
         <ul class="chats__list">
             <li class="chats__chat chat">
                 <a href="chat.html">
-                <div class="chat__column">
-                    <img class="chat_-avatar g-avatar" src="images/avatarr.jpg" />
-                    <div class="chat__content">
-                        <span class="chat__username">
-                            Lynn
-                        </span> 
-                        <span class="chat_-preview">Going home!</span>
+                    <div class="chats__chat friend friend--lg">
+                        <div class="friend__column">
+                        <img src="images/avatarr.jpg" alt="" class="g-avatar friend__avatar">
+                            <div class="friend__content">
+                                <span class="friend__name">
+                                    Lynn
+                                </span>
+                                <span class="friend__bottom-text">
+                                    Going home!
+                                </span>
+                            </div>
+                        </div>
+                        <div class="friend__column">
+                            <span class="chat__timestamp">
+                                March 8
+                            </span>
+                        </div>
                     </div>
-                </div>
-                <div class="chat__column">
-                    <span class="chat__timestamp">Yesterday</span>
-                </div>
                 </a>
             </li>
         </ul>
@@ -68,6 +74,7 @@
             </li>
             <li class="nav__list-item">
                 <a href="index.html" class="nav__list-link">
+                    <div class="nav__badge">8</div>
                     <i class="fas fa-comment"></i>
                 </a>
             </li>
