--- a/chat.html
+++ b/chat.html
@@ -44,7 +44,7 @@
             <ul class="chat__messages">
                 <span class="chat__timestamp">Friday, January 11, 2019</span>
                 <li class="incoming-message message">
-                    <img src="images/avatarr.jpg" class="g-avatar message__avatar" />
+                    <img src="images/avatarr.jpg" class="m-avatar message__avatar" />
                     <div class="message_content">
                         <span class="message__author">Best Friend</span>
                         <div class="message__bubble">
