--- a/chat.html
+++ b/chat.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="css/styles.css" />
     <title>Chat | Kakao Clone</title>
 </head>
-<body>
+<body class="chats-body">
     <div class="status-bar">
         <div class="status-bar__column">
             <span class="status-bar__clock">13:54 </span>
@@ -72,7 +72,7 @@
             </div>
             <div class="chat__write-column">
                 <span class="chat__write-icon">
-                    <i class="far fa-smile-wink"></i>
+                    <i class="far fa-smile"></i>
                 </span>
                 <span class="chat__write-icon">
                     <i class="fas fa-microphone"></i>
