--- a/chat.html
+++ b/chat.html
@@ -40,25 +40,39 @@
                 </span>
             </div>
         </header>
-        <main class="chat">
+        <main class="chat-screen">
             <ul class="chat__messages">
                 <span class="chat__timestamp">Friday, January 11, 2019</span>
                 <li class="incoming-message message">
                     <img src="images/avatarr.jpg" class="m-avatar message__avatar" />
                     <div class="message_content">
-                        <span class="message__author">Best Friend</span>
-                        <div class="message__bubble">
+                        <span class="message__bubble">
                             Congrats I love you!
-                        </div>
+                        </span>
+                        <span class="message__author">Best Friend</span>
                     </div>
-                    <span class="message__timestamp"></span>
+                </li>
+                <li class="sent-message message">
+                    <div class="message_content">
+                        <span class="message__bubble">
+                            Thank you see you soon!
+                        </span>
+                    </div>
                 </li>
                 <li class="incoming-message message">
-                    <span class="message__timestamp"></span>
+                    <img src="images/avatarr.jpg" class="m-avatar message__avatar" />
                     <div class="message_content">
-                        <div class="message__bubble">
+                        <span class="message__bubble">
+                            Congrats I love you!
+                        </span>
+                        <span class="message__author">Best Friend</span>
+                    </div>
+                </li>
+                <li class="sent-message message">
+                    <div class="message_content">
+                        <span class="message__bubble">
                             Thank you see you soon!
-                        </div>
+                        </span>
                     </div>
                 </li>
             </ul>
