--- a/chat.html
+++ b/chat.html
@@ -10,18 +10,19 @@
     <title>Chat | Kakao Clone</title>
 </head>
 <body class="chats-body">
-    <div class="status-bar">
-        <div class="status-bar__column">
-            <span class="status-bar__clock">13:54 </span>
+    <div class="header-wrapper">
+        <div class="status-bar">
+            <div class="status-bar__column">
+                <span class="status-bar__clock">13:54 </span>
+            </div>
+            <div class="status-bar__column">
+                <i class="fas fa-clock"></i>
+                <i class="fas fa-volume-up"></i>
+                <i class="fas fa-wifi"></i>
+                <span class="status-bar__battery-level">100%</span>
+                <i class="fas fa-battery-full"></i>
+            </div>
         </div>
-        <div class="status-bar__column">
-            <i class="fas fa-clock"></i>
-            <i class="fas fa-volume-up"></i>
-            <i class="fas fa-wifi"></i>
-            <span class="status-bar__battery-level">100%</span>
-            <i class="fas fa-battery-full"></i>
-        </div>
-    </div>
         <header class="header">
             <div class="header__header-column">
                 <div class="header__back-btn">
@@ -40,6 +41,7 @@
                 </span>
             </div>
         </header>
+    </div>
         <main class="chat-screen">
             <ul class="chat__messages">
                 <span class="chat__timestamp">Friday, January 11, 2019</span>
